# src_core

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/config/: tickers.json
src/: __init__.py
src/market/: __init__.py  polygon.py
src/util/: __init__.py  dates.py  env.py
