[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src-core"
version = "0.1.0"
description = "Shared market data and utility modules for market analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["market", "data", "polygon", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "httpx>=0.23.0",
    "QuantLib>=1.28.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/src-core"
Repository = "https://github.com/yourusername/src-core.git"

[tool.setuptools]
packages = ["src", "src.util", "src.market"]

[tool.setuptools.package-data]
src = ["*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
